# TS3-Soundboard-Ultimate

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_TEMPLATE.md  SECURITY.md  create-pluginfile.cmake  index.html  main.js  package-lock.json  package.json  preload.js  renderer-playback.js  renderer-state.js  renderer-trim.js  renderer-ui.js  renderer.js  styles.css
assets/: assets.qrc
build_fix/: CMakeCache.txt
docs/: upstream-basis.md
lib/: data-model.js  hotkeys.js
pluginsdk/include/teamspeak/: public_definitions.h
scripts/: deploy.ps1  test-teamspeak.ps1  validate-release.js
src/: package.ini.in  plugin.cpp  plugin.h  plugin_context.h  plugin_loader.c  ui_preview_main.cpp  version.h.in
src/audio/: audio_decoder.cpp  audio_decoder.h  mixer.cpp  mixer.h  preview_player.cpp  preview_player.h  wav_decoder.cpp  wav_decoder.h
src/core/: models.cpp  models.h  storage.cpp  storage.h  update_checker.cpp  update_checker.h  youtube_service.cpp  youtube_service.h
src/engine/: playback_engine.cpp  playback_engine.h
src/engine/upstream/: SampleBuffer.cpp  SampleBuffer.h  SampleProducer.h  SampleProducerThread.cpp  SampleProducerThread.h  SampleSource.h  Sampler.cpp  Sampler.h  SoundInfo.cpp  SoundInfo.h  TalkStateManager.cpp  TalkStateManager.h  inputfile.h  inputfileffmpeg.cpp  peakmeter.h
src/ui/: emoji_picker.cpp  emoji_picker.h  main_window.cpp  main_window.h
src/voicemods/: voicemod_manager.cpp  voicemod_manager.h  vst2_abi.h  vst2_host.cpp  vst2_host.h
tests/: release.test.js  smoke.test.js
